--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,17 +10,15 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (!username) { %>
-    <form class="form-inline my-3" action="/login" method="POST">
+    <% if (!user) { %>
     <div>
-      <input class="form-control mr-1" type="text" name="username" placeholder="Username" style="width: 170px">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+        <a class="btn btn-primary" href="/login">Login</a>
+        <a class="btn btn-primary" href="/register">Register</a>
     </div>
-    </form>
     <% } else { %>
       <form class="form-inline my-3" action="/logout" method="POST">
         <div>
-        Signed in as: <%= username %>
+        Signed in as: <%= user.email %>
         <button type=Submit" class="btn btn-primary">Sign Out</button>
         </div>
       </form>
