--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,6 +30,9 @@
               <button type="submit" class="btn btn-outline-danger">Delete</button>
             </form>
             </td>
+            <td>
+              <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit!</a>
+            </td>
           </tr>
         <% } %>
       </tbody>
